# InsightForge

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.gpu.yml  docker-compose.yml  entrypoint.sh  install.sh  pyproject.toml  run.ps1  run.sh
insightforge/: agent.py  config.py  guard.py  main.py  ollama_checker.py
insightforge/tools/: github.py  history.py  indexer.py  retriever.py  runner.py  scanner.py  stack.py
tests/: test_config.py  test_guard.py  test_ollama_checker.py
tests/tools/: test_github.py  test_history.py  test_indexer.py  test_runner.py  test_scanner.py  test_stack.py
