[project]
name = "insightforge"
version = "0.1.0"
description = "AI-powered local codebase analyst — RAG, tech stack detection, and GitHub reader via Ollama"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.5",
    "click>=8.3.1",
    "llama-index>=0.14.16",
    "llama-index-embeddings-ollama>=0.9.0",
    "llama-index-llms-ollama>=0.10.0",
    "llama-index-vector-stores-chroma>=0.5.5",
    "ollama>=0.6.1",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[project.scripts]
insightforge = "insightforge.main:main"
